Education and experience added

--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,32 @@
 # Site
-repository: sproogen/resume-theme
+repository: yusufkoca/yusufkoca.github.io
 favicon: images/favicon.ico
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Yusuf Koca
+title: Javascript Developer
+email: yfkoca@yandex.com
+website: www.yusufkoca.dev
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+# twitter_username: facespics
+github_username: yusufkoca
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: chillwildlife
-linkedin_username: jameswgrant
+# instagram_username: chillwildlife
+linkedin_username: ysfkoca
 # pinterest_username: jekyll
-youtube_username: globalmtb
+# youtube_username: globalmtb
 # googleplus_username: +jekyll
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/photo.png
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Yusuf. I like to call myself a Javascript Developer which I have experience and interest to learn new things about it. I currently work as Frontend Developer.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  I am most skilled in: <mark>Javascript</mark> and <mark>React</mark>
 
 # Projects Section
 # projects_title: Projects
@@ -57,4 +57,4 @@ sass:
   style: compressed
 
 plugins:
- - jekyll-seo-tag
+  - jekyll-seo-tag
