--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,9 @@
 - layout: left
-  name: Harvard University
-  dates: 2010 - 2013
-  qualification: BSc Computer Science
+  name: Bilkent University
+  dates: 2011 - 2016
+  qualification: BSc Computer Technology & Information System
   quote: >
-    Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+    Bilkent University is one of the nation's leading research universities. It enrolls approximately 12,500 students in faculties and schools on campus in Ankara, Turkey.
   description: | # this will include new lines to allow paragraphs
-    During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-    I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+    Programming journey beginned here. I learned fundamental programming skills along with languages like C, Java, Javascript.
+    Graduated as second best student and senior project awarded for being Best Innovative Senior Project.
