--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,31 @@
 - layout: left
-  company: The Boring Company
-  link: boringcompany.com
-  job_title: Senior Network System Administrator
-  dates: November 2017 - Present
+  company: Havelsan
+  link: havelsan.com.tr
+  job_title: Frontend Developer
+  dates: May 2018 - Present
   quote: >
-   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+    ES5, ES6, React, Redux, Fabric.js, Ext.js, Jaeger(internal js ui library)
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    As a part of Web Infrustructure team we develop apps and components that commonly used for more than one projects. 
+    Main responsibilities include developing apps with React and giving support to older apps written with fairly older libraries like JQuery and Ext.js.
+    Tools and technologies used: Git, Jira, Jenkins, Docker
+- layout: right
+  company: Unelabs Software & Simulation
+  link: www.unelabs.com/
+  job_title: Co-Founder & Fullstack Developer
+  dates: 2016 - 2018
+  quote: >
+    PHP, Laravel, Node.js, Unity
+  description: | # this will include new lines to allow paragraphs
+    It all begun when a close friend asked me to help him for a freelance job that has a tighth deadline. It brought me good money(at least for a student). Then we do more jobs and developed projects together. After almost two year of stundying & freelancing we graduated and established a small startup.
+    Unelabs has accomplished more than enough. Even if it did not make us rich and famous(apparently), it tought us a lot, not only technically but also socially, economically etc. 
+    Unelabs' main focus was Virtual Reality & Augmented Reality, but we also developed websites for money. Old freelance habits... I was mostly developing API's for our VR & AR apps. I had some Unity experince there too.
+- layout: left
+  company: IBM
+  link: www.ibm.com
+  job_title: Part Time IT Specialist
+  dates: 2015 - 2016
+  quote: >
+    HTML, CSS, Javascript
+  description: | # this will include new lines to allow paragraphs
+    Mostly help desk stuff. Installations, fixing accounts.. 'Have you tried turning it off and on again?'
