--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,32 @@
 - layout: top-middle
-  name: Super awesome project
-  link: github.com/sproogen
-  github: sproogen/resume-theme
+  name: Covid19 Monitor
+  link: hepcovid19.netlify.com
+  github: yusufkoca/covid19-monitor
   quote: >
-    This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+    Numbers, graphs, statistics, charts and comparisons about Covid19. Data is provided by JHU CSSE.
   description: | # this will include new lines to allow paragraphs
-    I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+    My hobby project developed to practice <mark>GraphQL</mark> and <mark>Chart.js</mark>. Also started to use <mark>Typescript</mark> in React. It was a good little journey that kept me busy at days of quarantine.
+- layout: left
+  name: Electromagnetic Spectrum
+  link: electromagnetic-spectrum.netlify.com
+  quote: >
+    Interactive & Informative app to learn physics for kids.
+  description: | # this will include new lines to allow paragraphs
+    Freelance project that I took part on. Developed with Vanilla JS, <mark>React</mark> and <mark>PixiJS</mark>
+- layout: right
+  name: Galaxy Hunter
+  link: galaxy-hunter.netlify.com
+  quote: >
+    Interactive & Informative app to learn astronomy for kids.
+  description: | # this will include new lines to allow paragraphs
+    Freelance project that I developed for a space museum. <mark>Phaser3</mark> used as a 2d game engine. Build to desktop platform with <mark>Electron</mark>
+- layout: center
+  name: Company Websites
+  link: www.ytbcocuk.com
+  link: www.tcdd.gov.tr
+  link: www.rihtimyapi.com.tr
+  link: www.omerbaskaya.av.tr
+  quote: >
+    Websites with dynamic content.
+  description: | # this will include new lines to allow paragraphs
+    I developed many websites for work and for friends. It tought me the basics of web from basic HTML to backend frameworks like Laravel. It's also a real fullstack experience that I have to register domains, deploy web apps, mind security concerns, SEO, backups etc.
