--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -25,7 +25,7 @@
   quote: >
     Websites with dynamic content.
   description: | # this will include new lines to allow paragraphs
-    I developed many websites for work and for friends. It tought me the basics of web from basic HTML to backend frameworks like Laravel. It's also a real fullstack experience that I have to register domains, deploy web apps, mind security concerns, SEO, backups etc.
+    I've developed many websites for work and for friends. It taught me the basics of web from basic HTML to backend frameworks like Laravel. It's also a real fullstack experience that I have to register domains, deploy web apps, mind security concerns, SEO, backups etc.
 - layout: left
   link: www.ytbcocuk.com
 - layout: left
