--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,4 +6,4 @@
     Bilkent University is one of the nation's leading research universities. It enrolls approximately 12,500 students in faculties and schools on campus in Ankara, Turkey.
   description: | # this will include new lines to allow paragraphs
     Programming journey begun here. I learned fundamental programming skills along with languages like C, Java, Javascript.
-    Graduated as second best student and senior project awarded for being Best Innovative Senior Project.
+    Graduated as second best student and senior project of my team awarded for being Best Innovative Senior Project.
