--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: Enough technical
 more_content: | # this will include new lines to allow paragraphs
-  30 years old world citizen without a passport. I currently live in Ankara, Turkey with my dearest wife. 
+  32 years old world citizen without a passport. I currently live in Ankara, Turkey with my dearest wife. 
   I grow up in Denizli which I'm proud of for no reason. 
 
   Things I enjoy doing and/or talking about:
@@ -49,7 +49,7 @@ more_content: | # this will include new lines to allow paragraphs
    - Board Games
    - Smart Home
    - Investing
-   - Boxing
+   - Basketball
    - History
 
 # Footer
